fix(3156109805): source Menu - alignment to Figma design (#306)

--- a/src/components/Features/Transfer/Transfer.module.scss
+++ b/src/components/Features/Transfer/Transfer.module.scss
@@ -1,6 +1,7 @@
 @import '../../../index';
 
 .errorMsg {
+  font-weight: 400;
   font-size: 14px;
   line-height: 20px;
   color: $--color-jasper;
